--- a/prepros.cfg
+++ b/prepros.cfg
@@ -8,7 +8,143 @@
       "cfgVersion": 2,
       "name": "dsn1686-exercise-3",
       "path": "",
-      "files": {},
+      "files": {
+        "60833937": {
+          "id": "60833937",
+          "path": "scss/components/_main.scss",
+          "output": "css/components/_main.css",
+          "name": "_main.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "7e70da7e"
+          ],
+          "type": "sass"
+        },
+        "2e8f9ea2": {
+          "id": "2e8f9ea2",
+          "path": "README.md",
+          "output": "README.html",
+          "name": "README.md",
+          "category": "HTML",
+          "autoCompile": true,
+          "sanitize": false,
+          "gfm": true,
+          "wrapWithHtml": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "markdown"
+        },
+        "0ffc35d4": {
+          "id": "0ffc35d4",
+          "path": "index.html",
+          "output": "index.html",
+          "name": "index.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "0c7b55b5": {
+          "id": "0c7b55b5",
+          "path": "css/style.css",
+          "output": "css/style-dist.css",
+          "name": "style.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "e8485c04": {
+          "id": "e8485c04",
+          "path": "scss/_base.scss",
+          "output": "css/_base.css",
+          "name": "_base.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "7e70da7e"
+          ],
+          "type": "sass"
+        },
+        "a6c8e46a": {
+          "id": "a6c8e46a",
+          "path": "scss/_mixins.scss",
+          "output": "css/_mixins.css",
+          "name": "_mixins.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "7e70da7e"
+          ],
+          "type": "sass"
+        },
+        "7e70da7e": {
+          "id": "7e70da7e",
+          "path": "scss/style.scss",
+          "output": "css/style.css",
+          "name": "style.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": true,
+          "sourceMaps": false,
+          "libSass": false,
+          "nodeSassCompress": false,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "aa5fd7cb": {
+          "id": "aa5fd7cb",
+          "path": "README.html",
+          "output": "README.html",
+          "name": "README.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        }
+      },
       "deploymentHistory": {},
       "config": {
         "watch": "",
